Fixed some Findbugs prio high issues
Change-Id: Ie9e22e081feb8245b1001580fc36dcf7cc0ecd1b
Signed-off-by: Michael Ochmann <michael.ochmann@sap.com>