@@ -13,7 +13,7 @@ package org.eclipse.skalli.nexus.internal;
 import static org.junit.Assert.*;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 
 import javax.xml.parsers.ParserConfigurationException;
 
@@ -26,16 +26,17 @@ import org.xml.sax.SAXException;
 @SuppressWarnings("nls")
 public class NexusArtifactImplTest {
 
-    private Element getElement(String xml) throws SAXException, IOException, ParserConfigurationException {
+    private Element getElement(String xml) throws Exception {
         return XMLUtils.documentFromString(xml).getDocumentElement();
     }
 
     @Test
-    public void testNexusArtifactImpl() throws NexusClientException, SAXException, IOException,
-            ParserConfigurationException {
+    public void testNexusArtifactImpl() throws Exception {
         NexusArtifactImpl nexusArtifact = new NexusArtifactImpl(getElement(//
                 "          <artifact>" //
-                        + "  <resourceURI>http://mynexus:8081/nexus/service/local/repositories/build.milestones/content/org/example/helloworld/org.example.helloworld.updatesite/0.1.0/org.example.helloworld.updatesite-0.1.0.eclipse-update-site</resourceURI>" //
+                        + "  <resourceURI>http://mynexus:8081/nexus/service/local/repositories/build.milestones/" //
+                        + "content/org/example/helloworld/org.example.helloworld.updatesite/0.1.0/org.example." //
+                        + "helloworld.updatesite-0.1.0.eclipse-update-site</resourceURI>" //
                         + "  <groupId>org.example.helloworld</groupId>" //
                         + "  <artifactId>org.example.helloworld.updatesite</artifactId>" //
                         + "  <version>0.1.0</version>" //
@@ -43,8 +44,12 @@ public class NexusArtifactImplTest {
                         + "  <extension>zip</extension>" //
                         + "  <repoId>build.milestones</repoId>" //
                         + "  <contextId>context.build.milestones</contextId>" //
-                        + "  <pomLink>http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones&amp;g=org.example.helloworld&amp;a=org.example.helloworld.updatesite&amp;v=0.1.0&amp;e=pom</pomLink>" //
-                        + "  <artifactLink>http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones&amp;g=org.example.helloworld&amp;a=org.example.helloworld.updatesite&amp;v=0.1.0&amp;e=zip</artifactLink>" //
+                        + "  <pomLink>http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build." //
+                        + "milestones&amp;g=org.example.helloworld&amp;a=org.example.helloworld.updatesite&amp;" //
+                        + "v=0.1.0&amp;e=pom</pomLink>" //
+                        + "  <artifactLink>http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=" //
+                        + "build.milestones&amp;g=org.example.helloworld&amp;a=org.example.helloworld.updatesite&" //
+                        + "amp;v=0.1.0&amp;e=zip</artifactLink>" //
                         + "</artifact>"));
 
         assertEquals("org.example.helloworld", nexusArtifact.getGroupId());
@@ -57,23 +62,22 @@ public class NexusArtifactImplTest {
         assertEquals("context.build.milestones", nexusArtifact.getContextId());
 
         assertEquals(
-                new URL(
-                        "http://mynexus:8081/nexus/service/local/repositories/build.milestones/content/org/example/helloworld/org.example.helloworld.updatesite/0.1.0/org.example.helloworld.updatesite-0.1.0.eclipse-update-site"),
+                new URI("http://mynexus:8081/nexus/service/local/repositories/build.milestones/content/org/" //
+                        + "example/helloworld/org.example.helloworld.updatesite/0.1.0/org.example.helloworld." //
+                        + "updatesite-0.1.0.eclipse-update-site"),
                 nexusArtifact.getResourceURI());
         assertEquals(
-                new URL(
-                        "http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones&g=org.example.helloworld&a=org.example.helloworld.updatesite&v=0.1.0&e=pom"),
+                new URI("http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones" //
+                        + "&g=org.example.helloworld&a=org.example.helloworld.updatesite&v=0.1.0&e=pom"),
                 nexusArtifact.getPomLink());
         assertEquals(
-                new URL(
-                        "http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones&g=org.example.helloworld&a=org.example.helloworld.updatesite&v=0.1.0&e=zip"),
+                new URI("http://mynexus:8081/nexus/service/local/artifact/maven/redirect?r=build.milestones" //
+                        + "&g=org.example.helloworld&a=org.example.helloworld.updatesite&v=0.1.0&e=zip"),
                 nexusArtifact.getArtifactLink());
     }
 
     @Test
-    public void testNexusArtifactImpl_StrangeOrderAndIncomplete() throws NexusClientException, SAXException,
-            IOException,
-            ParserConfigurationException {
+    public void testNexusArtifactImpl_StrangeOrderAndIncomplete() throws Exception {
         NexusArtifactImpl nexusArtifact = new NexusArtifactImpl(getElement(//
                 "          <artifact>" //
                         + "  <version>2.1.1</version>" //
@@ -96,8 +100,7 @@ public class NexusArtifactImplTest {
     }
 
     @Test
-    public void testNexusArtifactImpl_EmptyArtifact() throws SAXException, IOException, ParserConfigurationException,
-            NexusClientException {
+    public void testNexusArtifactImpl_EmptyArtifact() throws Exception {
         NexusArtifactImpl nexusArtifact = new NexusArtifactImpl(getElement("<artifact/>"));
 
         assertEquals(null, nexusArtifact.getGroupId());
@@ -115,8 +118,7 @@ public class NexusArtifactImplTest {
     }
 
     @Test
-    public void testNexusArtifactImpl_NoArtifact() throws SAXException, IOException, ParserConfigurationException,
-            NexusClientException {
+    public void testNexusArtifactImpl_NoArtifact() throws Exception {
         try {
             new NexusArtifactImpl(getElement("<dummy/>"));
             fail("IllegalArgumentException expected, but not thrown.");
@@ -138,9 +140,7 @@ public class NexusArtifactImplTest {
     }
 
     @Test
-    public void testNexusArtifactImpl_DuplicatedVersion() throws SAXException, IOException,
-            ParserConfigurationException,
-            NexusClientException {
+    public void testNexusArtifactImpl_DuplicatedVersion() throws Exception {
         try {
             new NexusArtifactImpl(getElement(//
                     "          <artifact>" //
